Require migration packages

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,12 @@
         "drupal/date_popup": "^2.0",
         "drupal/entity_clone": "^2.1@beta",
         "drupal/formdazzle": "^4.0",
+        "drupal/migrate_devel": "^3.0",
+        "drupal/migrate_directory": "^2.0@dev",
+        "drupal/migrate_plus": "^6.0",
+        "drupal/migrate_source_directory": "^2.2",
+        "drupal/migrate_tools": "^6.1",
+        "drupal/migration_tools": "^2.9",
         "drupal/token_filter": "^2.2",
         "drupal/trash": "^3.0",
         "drupal/twig_tweak": "^3.4",
