TRO URL aliases

--- a/config/sync/field.field.node.traffic_regulation_order.field_reference.yml
+++ b/config/sync/field.field.node.traffic_regulation_order.field_reference.yml
@@ -11,7 +11,7 @@ entity_type: node
 bundle: traffic_regulation_order
 label: Reference
 description: ''
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
