--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "require": {
         "composer/installers": "^2.3",
         "cweagans/composer-patches": "^1.6",
+        "drupal/anchor_link": "^3.0",
         "drupal/core-composer-scaffold": "^10.3",
         "drupal/core-recommended": "^10.3",
         "drupal/created_date_views_filters": "^1.0",
