--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -4,6 +4,7 @@ module:
   address: 0
   admin_toolbar: 0
   admin_toolbar_tools: 0
+  anchor_link: 0
   automated_cron: 0
   block: 0
   block_content: 0
