--- a/config/sync/core.entity_form_display.node.localgov_services_sublanding.default.yml
+++ b/config/sync/core.entity_form_display.node.localgov_services_sublanding.default.yml
@@ -4,11 +4,16 @@ status: true
 dependencies:
   config:
     - field.field.node.localgov_services_sublanding.body
+    - field.field.node.localgov_services_sublanding.localgov_common_tasks
     - field.field.node.localgov_services_sublanding.localgov_services_parent
     - field.field.node.localgov_services_sublanding.localgov_topics
     - node.type.localgov_services_sublanding
+    - workflows.workflow.localgov_editorial
   module:
+    - content_moderation
     - field_group
+    - localgov_review_date
+    - localgov_services
     - paragraphs
     - path
     - text
@@ -17,11 +22,12 @@ third_party_settings:
     group_tabs:
       children:
         - group_description
+        - group_top_tasks
         - group_topics
       label: tabs
       region: content
       parent_name: ''
-      weight: 1
+      weight: 2
       format_type: tabs
       format_settings:
         classes: ''
@@ -36,7 +42,7 @@ third_party_settings:
       label: Content
       region: content
       parent_name: group_tabs
-      weight: 5
+      weight: 11
       format_type: tab
       format_settings:
         classes: ''
@@ -50,11 +56,27 @@ third_party_settings:
       label: 'Child pages'
       region: content
       parent_name: group_tabs
-      weight: 6
+      weight: 13
       format_type: tab
       format_settings:
         classes: ''
         id: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+    group_top_tasks:
+      children:
+        - localgov_common_tasks
+      label: 'Top tasks'
+      region: content
+      parent_name: group_tabs
+      weight: 12
+      format_type: tab
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        label_as_html: false
         formatter: closed
         description: ''
         required_fields: true
@@ -77,12 +99,36 @@ content:
     third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 3
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
-  localgov_services_navigation_children:
+  localgov_common_tasks:
+    type: link_with_type
+    weight: 12
+    region: content
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
+  localgov_review_date:
+    type: review_date
     weight: 0
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  localgov_service_contacts:
+    type: entity_reference_autocomplete
+    weight: 13
+    region: content
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  localgov_services_navigation_children:
+    weight: 1
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -108,6 +154,12 @@ content:
       form_display_mode: default
       default_paragraph_type: ''
     third_party_settings: {  }
+  moderation_state:
+    type: moderation_state_default
+    weight: 12
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   path:
     type: path
     weight: 10
@@ -116,14 +168,19 @@ content:
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 6
+    weight: 5
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
+  simple_sitemap:
+    weight: 11
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 7
+    weight: 8
     region: content
     settings:
       display_label: true
@@ -145,7 +202,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 2
+    weight: 3
     region: content
     settings:
       match_operator: CONTAINS
