--- a/config/sync/core.entity_view_display.node.localgov_services_sublanding.default.yml
+++ b/config/sync/core.entity_view_display.node.localgov_services_sublanding.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.localgov_services_sublanding.body
+    - field.field.node.localgov_services_sublanding.localgov_common_tasks
     - field.field.node.localgov_services_sublanding.localgov_services_parent
     - field.field.node.localgov_services_sublanding.localgov_topics
     - node.type.localgov_services_sublanding
@@ -17,16 +18,23 @@ targetEntityType: node
 bundle: localgov_services_sublanding
 mode: default
 content:
+  content_moderation_control:
+    settings: {  }
+    third_party_settings: {  }
+    weight: -20
+    region: content
   localgov_topics:
     type: entity_reference_revisions_entity_view
-    weight: 0
     label: hidden
     settings:
       view_mode: default
       link: ''
     third_party_settings: {  }
+    weight: 0
     region: content
 hidden:
   body: true
   links: true
+  localgov_common_tasks: true
   localgov_services_parent: true
+  search_api_excerpt: true
