--- a/config/sync/core.entity_view_display.node.localgov_services_sublanding.search_index.yml
+++ b/config/sync/core.entity_view_display.node.localgov_services_sublanding.search_index.yml
@@ -5,11 +5,13 @@ dependencies:
   config:
     - core.entity_view_mode.node.search_index
     - field.field.node.localgov_services_sublanding.body
+    - field.field.node.localgov_services_sublanding.localgov_common_tasks
     - field.field.node.localgov_services_sublanding.localgov_services_parent
     - field.field.node.localgov_services_sublanding.localgov_topics
     - node.type.localgov_services_sublanding
   module:
     - entity_reference_revisions
+    - link
     - text
     - user
 _core:
@@ -21,27 +23,44 @@ mode: search_index
 content:
   body:
     type: text_default
-    weight: 0
-    region: content
     label: hidden
     settings: {  }
     third_party_settings: {  }
+    weight: 0
+    region: content
+  content_moderation_control:
+    settings: {  }
+    third_party_settings: {  }
+    weight: -20
+    region: content
+  localgov_common_tasks:
+    type: link
+    label: hidden
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
+    weight: 12
+    region: content
   localgov_services_parent:
     type: entity_reference_label
-    weight: 2
-    region: content
     label: hidden
     settings:
       link: true
     third_party_settings: {  }
+    weight: 2
+    region: content
   localgov_topics:
     type: entity_reference_revisions_entity_view
-    weight: 1
     label: hidden
     settings:
       view_mode: default
       link: ''
     third_party_settings: {  }
+    weight: 1
     region: content
 hidden:
   links: true
