--- a/config/sync/core.entity_view_display.node.localgov_services_sublanding.search_result.yml
+++ b/config/sync/core.entity_view_display.node.localgov_services_sublanding.search_result.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.search_result
     - field.field.node.localgov_services_sublanding.body
+    - field.field.node.localgov_services_sublanding.localgov_common_tasks
     - field.field.node.localgov_services_sublanding.localgov_services_parent
     - field.field.node.localgov_services_sublanding.localgov_topics
     - node.type.localgov_services_sublanding
@@ -17,6 +18,11 @@ targetEntityType: node
 bundle: localgov_services_sublanding
 mode: search_result
 content:
+  content_moderation_control:
+    settings: {  }
+    third_party_settings: {  }
+    weight: -20
+    region: content
   search_api_excerpt:
     settings: {  }
     third_party_settings: {  }
@@ -25,5 +31,6 @@ content:
 hidden:
   body: true
   links: true
+  localgov_common_tasks: true
   localgov_services_parent: true
   localgov_topics: true
