--- a/config/sync/core.entity_view_display.node.localgov_services_page.teaser.yml
+++ b/config/sync/core.entity_view_display.node.localgov_services_page.teaser.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.node.localgov_services_page.localgov_page_components
     - field.field.node.localgov_services_page.localgov_related_links
     - field.field.node.localgov_services_page.localgov_services_parent
+    - field.field.node.localgov_services_page.localgov_subsites_content
     - field.field.node.localgov_services_page.localgov_topic_classified
     - node.type.localgov_services_page
   module:
@@ -24,12 +25,17 @@ bundle: localgov_services_page
 mode: teaser
 content:
   body:
-    label: hidden
-    weight: 0
     type: text_summary_or_trimmed
+    label: hidden
     settings:
       trim_length: 600
     third_party_settings: {  }
+    weight: 0
+    region: content
+  content_moderation_control:
+    settings: {  }
+    third_party_settings: {  }
+    weight: -20
     region: content
 hidden:
   links: true
@@ -39,4 +45,6 @@ hidden:
   localgov_page_components: true
   localgov_related_links: true
   localgov_services_parent: true
+  localgov_subsites_content: true
   localgov_topic_classified: true
+  search_api_excerpt: true
