--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -10,6 +10,8 @@ module:
   block_content: 0
   book: 0
   breakpoint: 0
+  charts: 0
+  charts_chartjs: 0
   ckeditor5: 0
   condition_field: 0
   config: 0
