--- a/config/sync/pathauto.pattern.localgov_services_hierarchy.yml
+++ b/config/sync/pathauto.pattern.localgov_services_hierarchy.yml
@@ -9,17 +9,17 @@ _core:
 id: localgov_services_hierarchy
 label: 'Services Hierarchy'
 type: 'canonical_entities:node'
-pattern: '[node:localgov_services_parent:entity:url:relative]/[node:title]'
+pattern: '[node:localgov_services_parent:entity:url:path]/[node:title]'
 selection_criteria:
   9dd1b1bc-3678-4642-8568-86d6d27c3dfd:
     id: 'entity_bundle:node'
+    negate: false
+    uuid: 9dd1b1bc-3678-4642-8568-86d6d27c3dfd
+    context_mapping:
+      node: node
     bundles:
       localgov_services_page: localgov_services_page
       localgov_services_sublanding: localgov_services_sublanding
-    negate: false
-    context_mapping:
-      node: node
-    uuid: 9dd1b1bc-3678-4642-8568-86d6d27c3dfd
 selection_logic: and
 weight: -5
 relationships: {  }
