directories design and css.

--- a/web/themes/custom/pcc/pcc.info.yml
+++ b/web/themes/custom/pcc/pcc.info.yml
@@ -18,6 +18,8 @@ libraries-extend:
     - pcc/callout-box
   localgov_base/card:
     - pcc/card
+  localgov_base/directories:
+    - pcc/directories
   localgov_base/footer:
     - pcc/footer
   localgov_base/global:
