--- a/web/themes/custom/pcc/pcc.libraries.yml
+++ b/web/themes/custom/pcc/pcc.libraries.yml
@@ -53,6 +53,11 @@ card:
     theme:
       css/components/card.css: {}
 
+directories:
+  css:
+    layout:
+      css/components/directories.css: {}
+
 featured-teasers:
   css:
     theme:
