--- a/config/sync/core.entity_view_display.node.localgov_directories_venue.default.yml
+++ b/config/sync/core.entity_view_display.node.localgov_directories_venue.default.yml
@@ -32,29 +32,33 @@ third_party_settings:
         - localgov_directory_phone
         - localgov_directory_email
         - localgov_directory_website
+      label: ''
       parent_name: ''
+      region: content
       weight: 3
       format_type: fieldset
-      region: content
       format_settings:
-        id: ''
         classes: ''
+        show_empty_fields: false
+        id: ''
+        label_as_html: false
         description: ''
-      label: Enquiries
     group_venue:
       children:
         - localgov_location
         - localgov_directory_opening_times
         - localgov_directory_notes
+      label: ''
       parent_name: ''
+      region: content
       weight: 2
       format_type: fieldset
-      region: content
       format_settings:
-        id: ''
         classes: ''
+        show_empty_fields: false
+        id: ''
+        label_as_html: false
         description: ''
-      label: Venue
 _core:
   default_config_hash: R-xrodEK1MF6dD6qt9xBTNJzMeDVu6THVvPtfuwPEaE
 id: node.localgov_directories_venue.default
@@ -63,68 +67,73 @@ bundle: localgov_directories_venue
 mode: default
 content:
   body:
-    label: hidden
     type: text_default
-    weight: 0
+    label: hidden
     settings: {  }
     third_party_settings: {  }
+    weight: 0
+    region: content
+  content_moderation_control:
+    settings: {  }
+    third_party_settings: {  }
+    weight: -20
     region: content
   localgov_directory_email:
-    weight: 8
+    type: email_mailto
     label: inline
     settings: {  }
     third_party_settings: {  }
-    type: email_mailto
+    weight: 8
     region: content
   localgov_directory_files:
-    weight: 1
+    type: entity_reference_label
     label: above
     settings:
       link: true
     third_party_settings: {  }
-    type: entity_reference_label
+    weight: 1
     region: content
   localgov_directory_job_title:
-    weight: 6
+    type: string
     label: inline
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    type: string
+    weight: 6
     region: content
   localgov_directory_name:
-    weight: 4
+    type: string
     label: inline
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    type: string
+    weight: 4
     region: content
   localgov_directory_notes:
-    weight: 4
+    type: text_default
     label: above
     settings: {  }
     third_party_settings: {  }
-    type: text_default
+    weight: 4
     region: content
   localgov_directory_opening_times:
-    weight: 3
+    type: text_default
     label: above
     settings: {  }
     third_party_settings: {  }
-    type: text_default
+    weight: 3
     region: content
   localgov_directory_phone:
-    weight: 7
+    type: telephone_link
     label: inline
     settings:
       title: ''
     third_party_settings: {  }
-    type: telephone_link
+    weight: 7
     region: content
   localgov_directory_website:
-    weight: 9
-    label: above
+    type: link
+    label: inline
     settings:
       trim_length: 80
       url_only: false
@@ -132,16 +141,16 @@ content:
       rel: ''
       target: ''
     third_party_settings: {  }
-    type: link
+    weight: 9
     region: content
   localgov_location:
-    weight: 2
-    label: hidden
+    type: entity_reference_entity_view
+    label: visually_hidden
     settings:
       view_mode: embed
       link: false
     third_party_settings: {  }
-    type: entity_reference_entity_view
+    weight: 2
     region: content
 hidden:
   links: true
