--- a/composer.json
+++ b/composer.json
@@ -4,16 +4,16 @@
     "type": "project",
     "license": "GPL-2.0-or-later",
     "homepage": "https://github.com/localgovdrupal/localgov_project",
-    "repositories": [
-        {
+    "repositories": {
+        "drupal": {
             "type": "composer",
             "url": "https://packages.drupal.org/8"
         },
-        {
+        "asset-packagist": {
             "type": "composer",
             "url": "https://asset-packagist.org"
         }
-    ],
+    },
     "require": {
         "composer/installers": "^2.3",
         "cweagans/composer-patches": "^1.6",
@@ -36,10 +36,7 @@
         "drupal/twig_tweak": "^3.4",
         "localgovdrupal/localgov": "^3.0",
         "localgovdrupal/localgov_search_solr": "^1.1",
-        "npm-asset/chart.js": "^4.4",
-        "npm-asset/chartjs-adapter-date-fns": "^3.0",
-        "npm-asset/chartjs-plugin-datalabels": "^2.0",
-        "oomphinc/composer-installers-extender": "*",
+        "oomphinc/composer-installers-extender": "^2.0",
         "wikimedia/composer-merge-plugin": "^2.1"
     },
     "require-dev": {
@@ -95,6 +92,11 @@
                     "overwrite": false
                 },
                 "[web-root]/sites/development.services.yml": "assets/composer/development.services.yml"
+            }
+        },
+        "patches": {
+            "drupal/book": {
+                "Cannot save unpublished version non book admins, failed testing. View results": "https://www.drupal.org/files/issues/2918537-cannot-save-unpublished-version-non-book-admins-07.patch"
             }
         },
         "patches-ignore": {
