--- a/config/sync/views.view.localgov_directory_channel.yml
+++ b/config/sync/views.view.localgov_directory_channel.yml
@@ -259,6 +259,7 @@ display:
           skip_access: false
           preserve_facet_query_args: false
       relationships: {  }
+      use_ajax: false
       header: {  }
       footer: {  }
       display_extenders: {  }
