--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -154,6 +154,7 @@ module:
   simple_sitemap: 0
   symfony_mailer: 0
   system: 0
+  table_of_contents: 0
   tablefield: 0
   taxonomy: 0
   telephone: 0
