--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "drupal/migrate_source_directory": "^2.2",
         "drupal/migrate_tools": "^6.1",
         "drupal/migration_tools": "^2.9",
+        "drupal/toc_filter": "^2.4",
         "drupal/token_filter": "^2.2",
         "drupal/trash": "^3.0",
         "drupal/twig_tweak": "^3.4",
