News article layout and page css changes.

--- a/config/sync/block.block.pcc_localgov_guides_contents_scarfolk.yml
+++ b/config/sync/block.block.pcc_localgov_guides_contents_scarfolk.yml
@@ -17,6 +17,6 @@ plugin: localgov_guides_contents
 settings:
   id: localgov_guides_contents
   label: 'Guide contents'
-  label_display: '0'
+  label_display: visible
   provider: localgov_guides
 visibility: {  }
