--- a/config/sync/core.entity_view_display.node.localgov_news_article.default.yml
+++ b/config/sync/core.entity_view_display.node.localgov_news_article.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - facets.facet.localgov_news_category
     - field.field.node.localgov_news_article.body
+    - field.field.node.localgov_news_article.field_latest_news
     - field.field.node.localgov_news_article.field_media_image
     - field.field.node.localgov_news_article.localgov_news_categories
     - field.field.node.localgov_news_article.localgov_news_date
@@ -19,6 +20,7 @@ dependencies:
     - media
     - text
     - user
+    - viewsreference
   enforced:
     module:
       - localgov_news
@@ -40,6 +42,15 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 0
+    region: content
+  field_latest_news:
+    type: viewsreference_formatter
+    label: above
+    settings:
+      plugin_types:
+        - block
+    third_party_settings: {  }
+    weight: 7
     region: content
   field_media_image:
     type: media_thumbnail
@@ -72,17 +83,21 @@ content:
     label: hidden
     settings:
       timezone_override: ''
-      date_format: 'j F Y'
-    third_party_settings: {  }
+      date_format: 'l j F Y'
+    third_party_settings:
+      field_formatter_class:
+        class: ''
     weight: 3
     region: content
   localgov_news_related:
     type: entity_reference_entity_view
     label: hidden
     settings:
-      view_mode: teaser
+      view_mode: html_list
       link: false
-    third_party_settings: {  }
+    third_party_settings:
+      field_formatter_class:
+        class: ''
     weight: 6
     region: content
 hidden:
