--- a/config/sync/core.entity_view_display.node.localgov_news_article.html_list.yml
+++ b/config/sync/core.entity_view_display.node.localgov_news_article.html_list.yml
@@ -1,9 +1,9 @@
-uuid: 49a248ae-8d69-41d2-9d3b-7fc1a181d601
+uuid: 5d7f34c5-6712-4271-b0c7-d0b995be2183
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.node.search_index
+    - core.entity_view_mode.node.html_list
     - field.field.node.localgov_news_article.body
     - field.field.node.localgov_news_article.field_latest_news
     - field.field.node.localgov_news_article.field_media_image
@@ -19,28 +19,29 @@ dependencies:
     module:
       - localgov_news
 _core:
-  default_config_hash: jCj0jiIfrq3g5piL9nO9jsYX_2e8ov019c71K7urxsY
-id: node.localgov_news_article.search_index
+  default_config_hash: tWCbYCF-F5ZFix_nkjkhJ3dnrHdYRDssuh5K1f7X1G0
+id: node.localgov_news_article.html_list
 targetEntityType: node
 bundle: localgov_news_article
-mode: search_index
+mode: html_list
 content:
   body:
-    type: text_default
+    type: text_summary_or_trimmed
     label: hidden
+    settings:
+      trim_length: 600
+    third_party_settings: {  }
+    weight: 1
+    region: content
+  links:
     settings: {  }
     third_party_settings: {  }
     weight: 0
     region: content
-  content_moderation_control:
-    settings: {  }
-    third_party_settings: {  }
-    weight: -20
-    region: content
 hidden:
+  content_moderation_control: true
   field_latest_news: true
   field_media_image: true
-  links: true
   localgov_news_categories: true
   localgov_news_date: true
   localgov_news_related: true
