--- a/config/sync/core.entity_view_display.node.localgov_news_article.search_result.yml
+++ b/config/sync/core.entity_view_display.node.localgov_news_article.search_result.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.search_result
     - field.field.node.localgov_news_article.body
+    - field.field.node.localgov_news_article.field_latest_news
     - field.field.node.localgov_news_article.field_media_image
     - field.field.node.localgov_news_article.localgov_news_categories
     - field.field.node.localgov_news_article.localgov_news_date
@@ -31,6 +32,7 @@ content:
 hidden:
   body: true
   content_moderation_control: true
+  field_latest_news: true
   field_media_image: true
   links: true
   localgov_news_categories: true
