--- a/config/sync/core.entity_view_display.node.localgov_news_article.teaser.yml
+++ b/config/sync/core.entity_view_display.node.localgov_news_article.teaser.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.localgov_news_article.body
+    - field.field.node.localgov_news_article.field_latest_news
     - field.field.node.localgov_news_article.field_media_image
     - field.field.node.localgov_news_article.localgov_news_categories
     - field.field.node.localgov_news_article.localgov_news_date
@@ -68,6 +69,7 @@ content:
     weight: 4
     region: content
 hidden:
+  field_latest_news: true
   links: true
   localgov_news_related: true
   localgov_newsroom: true
