Disable old section

--- a/config/sync/field.field.node.localgov_subsites_page.localgov_subsites_content.yml
+++ b/config/sync/field.field.node.localgov_subsites_page.localgov_subsites_content.yml
@@ -18,6 +18,7 @@ dependencies:
     - paragraphs.paragraphs_type.localgov_key_facts
     - paragraphs.paragraphs_type.localgov_link_and_summary
     - paragraphs.paragraphs_type.localgov_media_with_text
+    - paragraphs.paragraphs_type.localgov_page_section
     - paragraphs.paragraphs_type.localgov_quote
     - paragraphs.paragraphs_type.localgov_table
     - paragraphs.paragraphs_type.localgov_tabs
@@ -42,15 +43,16 @@ settings:
   handler_settings:
     target_bundles:
       localgov_accordion: localgov_accordion
-      localgov_block_view: localgov_block_view
       localgov_box_link: localgov_box_link
       localgov_call_out_box: localgov_call_out_box
       localgov_documents: localgov_documents
       localgov_fact_box: localgov_fact_box
       localgov_featured_teasers: localgov_featured_teasers
       localgov_image: localgov_image
-      localgov_key_contacts: localgov_key_contacts
       localgov_key_facts: localgov_key_facts
+      localgov_block_view: localgov_block_view
+      localgov_box_links_listing: localgov_box_links_listing
+      localgov_key_contacts: localgov_key_contacts
       localgov_link_and_summary: localgov_link_and_summary
       localgov_media_with_text: localgov_media_with_text
       localgov_quote: localgov_quote
@@ -58,9 +60,15 @@ settings:
       localgov_tabs: localgov_tabs
       localgov_text: localgov_text
       localgov_video: localgov_video
-      localgov_box_links_listing: localgov_box_links_listing
+      localgov_page_section: localgov_page_section
     negate: 0
     target_bundles_drag_drop:
+      banner_home_page:
+        weight: 41
+        enabled: false
+      chart:
+        weight: 42
+        enabled: false
       from_library:
         weight: -55
         enabled: false
@@ -69,6 +77,12 @@ settings:
         enabled: true
       localgov_accordion_pane:
         weight: -54
+        enabled: false
+      localgov_banner_primary:
+        weight: 46
+        enabled: false
+      localgov_banner_secondary:
+        weight: 47
         enabled: false
       localgov_block_view:
         weight: -37
@@ -91,12 +105,21 @@ settings:
       localgov_fact_box:
         weight: -49
         enabled: true
+      localgov_featured_campaign:
+        weight: 55
+        enabled: false
+      localgov_featured_subsite:
+        weight: 56
+        enabled: false
       localgov_featured_teaser:
         weight: -29
         enabled: false
       localgov_featured_teasers:
         weight: -48
         enabled: true
+      localgov_ia_block:
+        weight: 59
+        enabled: false
       localgov_image:
         weight: -47
         enabled: true
@@ -112,6 +135,9 @@ settings:
       localgov_key_facts:
         weight: -46
         enabled: true
+      localgov_labelled_icon:
+        weight: 65
+        enabled: false
       localgov_link:
         weight: -36
         enabled: false
@@ -121,9 +147,24 @@ settings:
       localgov_media_with_text:
         weight: -24
         enabled: true
+      localgov_newsroom_teaser:
+        weight: 69
+        enabled: false
+      localgov_numbered_text:
+        weight: 70
+        enabled: false
+      localgov_page_section:
+        weight: 71
+        enabled: true
+      localgov_publications_banner:
+        weight: 72
+        enabled: false
       localgov_quote:
         weight: -23
         enabled: true
+      localgov_subscribe_panel:
+        weight: 74
+        enabled: false
       localgov_tab_panel:
         weight: -15
         enabled: false
@@ -138,9 +179,6 @@ settings:
         enabled: true
       localgov_video:
         weight: -19
-        enabled: true
-      page_section:
-        weight: -16
         enabled: true
       topic_list_builder:
         weight: -35
