--- a/config/sync/field.field.node.localgov_services_page.localgov_subsites_content.yml
+++ b/config/sync/field.field.node.localgov_services_page.localgov_subsites_content.yml
@@ -5,7 +5,6 @@ dependencies:
   config:
     - field.storage.node.localgov_subsites_content
     - node.type.localgov_services_page
-    - paragraphs.paragraphs_type.chart
     - paragraphs.paragraphs_type.localgov_accordion
     - paragraphs.paragraphs_type.localgov_block_view
     - paragraphs.paragraphs_type.localgov_box_link
@@ -30,6 +29,7 @@ dependencies:
     - paragraphs.paragraphs_type.localgov_tabs
     - paragraphs.paragraphs_type.localgov_text
     - paragraphs.paragraphs_type.localgov_video
+    - paragraphs.paragraphs_type.pcc_chart
   module:
     - entity_reference_revisions
 id: node.localgov_services_page.localgov_subsites_content
@@ -51,7 +51,7 @@ settings:
       localgov_box_link: localgov_box_link
       localgov_box_links_listing: localgov_box_links_listing
       localgov_call_out_box: localgov_call_out_box
-      chart: chart
+      pcc_chart: pcc_chart
       localgov_documents: localgov_documents
       localgov_featured_teasers: localgov_featured_teasers
       localgov_image: localgov_image
@@ -74,123 +74,123 @@ settings:
     negate: 0
     target_bundles_drag_drop:
       banner_home_page:
-        weight: -52
-        enabled: false
-      chart:
-        weight: -76
-        enabled: true
-      from_library:
-        weight: -71
-        enabled: false
-      localgov_accordion:
-        weight: -82
-        enabled: true
-      localgov_accordion_pane:
-        weight: -73
-        enabled: false
-      localgov_banner_primary:
-        weight: -51
-        enabled: false
-      localgov_banner_secondary:
         weight: -50
         enabled: false
-      localgov_block_view:
-        weight: -81
-        enabled: true
-      localgov_box_link:
+      from_library:
+        weight: -69
+        enabled: false
+      localgov_accordion:
         weight: -80
         enabled: true
-      localgov_box_links_listing:
-        weight: -78
-        enabled: true
-      localgov_call_out_box:
-        weight: -77
-        enabled: true
-      localgov_contact:
-        weight: -70
+      localgov_accordion_pane:
+        weight: -71
         enabled: false
-      localgov_documents:
-        weight: -75
-        enabled: true
-      localgov_fact_box:
+      localgov_banner_primary:
         weight: -49
         enabled: false
-      localgov_featured_campaign:
+      localgov_banner_secondary:
         weight: -48
         enabled: false
-      localgov_featured_subsite:
-        weight: -58
-        enabled: true
-      localgov_featured_teaser:
+      localgov_block_view:
         weight: -79
-        enabled: false
-      localgov_featured_teasers:
-        weight: -74
         enabled: true
-      localgov_ia_block:
-        weight: -59
+      localgov_box_link:
+        weight: -78
         enabled: true
-      localgov_image:
-        weight: -69
+      localgov_box_links_listing:
+        weight: -76
         enabled: true
-      localgov_key_contact_item:
-        weight: -53
-        enabled: false
-      localgov_key_contacts:
-        weight: -54
+      localgov_call_out_box:
+        weight: -75
         enabled: true
-      localgov_key_fact:
-        weight: -83
-        enabled: false
-      localgov_key_facts:
+      localgov_contact:
         weight: -68
+        enabled: false
+      localgov_documents:
+        weight: -73
         enabled: true
-      localgov_labelled_icon:
-        weight: -57
-        enabled: true
-      localgov_link:
-        weight: -67
-        enabled: true
-      localgov_link_and_summary:
-        weight: -66
-        enabled: true
-      localgov_media_with_text:
-        weight: -65
-        enabled: true
-      localgov_newsroom_teaser:
-        weight: -56
-        enabled: true
-      localgov_numbered_text:
+      localgov_fact_box:
         weight: -47
         enabled: false
-      localgov_page_section:
+      localgov_featured_campaign:
         weight: -46
-        enabled: true
-      localgov_publications_banner:
-        weight: -45
         enabled: false
-      localgov_quote:
-        weight: -64
+      localgov_featured_subsite:
+        weight: -56
         enabled: true
-      localgov_subscribe_panel:
+      localgov_featured_teaser:
+        weight: -77
+        enabled: false
+      localgov_featured_teasers:
+        weight: -72
+        enabled: true
+      localgov_ia_block:
+        weight: -57
+        enabled: true
+      localgov_image:
+        weight: -67
+        enabled: true
+      localgov_key_contact_item:
+        weight: -51
+        enabled: false
+      localgov_key_contacts:
+        weight: -52
+        enabled: true
+      localgov_key_fact:
+        weight: -81
+        enabled: false
+      localgov_key_facts:
+        weight: -66
+        enabled: true
+      localgov_labelled_icon:
         weight: -55
         enabled: true
-      localgov_tab_panel:
-        weight: -72
-        enabled: false
-      localgov_table:
+      localgov_link:
+        weight: -65
+        enabled: true
+      localgov_link_and_summary:
+        weight: -64
+        enabled: true
+      localgov_media_with_text:
         weight: -63
         enabled: true
-      localgov_tabs:
+      localgov_newsroom_teaser:
+        weight: -54
+        enabled: true
+      localgov_numbered_text:
+        weight: -45
+        enabled: false
+      localgov_page_section:
+        weight: -44
+        enabled: true
+      localgov_publications_banner:
+        weight: -43
+        enabled: false
+      localgov_quote:
         weight: -62
         enabled: true
-      localgov_text:
+      localgov_subscribe_panel:
+        weight: -53
+        enabled: true
+      localgov_tab_panel:
+        weight: -70
+        enabled: false
+      localgov_table:
         weight: -61
         enabled: true
-      localgov_video:
+      localgov_tabs:
         weight: -60
         enabled: true
+      localgov_text:
+        weight: -59
+        enabled: true
+      localgov_video:
+        weight: -58
+        enabled: true
+      pcc_chart:
+        weight: -74
+        enabled: true
       topic_list_builder:
-        weight: -44
+        weight: -42
         enabled: false
 field_type: entity_reference_revisions
