--- a/config/sync/field.field.node.localgov_subsites_overview.localgov_subsites_content.yml
+++ b/config/sync/field.field.node.localgov_subsites_overview.localgov_subsites_content.yml
@@ -5,7 +5,6 @@ dependencies:
   config:
     - field.storage.node.localgov_subsites_content
     - node.type.localgov_subsites_overview
-    - paragraphs.paragraphs_type.chart
     - paragraphs.paragraphs_type.localgov_accordion
     - paragraphs.paragraphs_type.localgov_block_view
     - paragraphs.paragraphs_type.localgov_box_link
@@ -30,6 +29,7 @@ dependencies:
     - paragraphs.paragraphs_type.localgov_tabs
     - paragraphs.paragraphs_type.localgov_text
     - paragraphs.paragraphs_type.localgov_video
+    - paragraphs.paragraphs_type.pcc_chart
   module:
     - entity_reference_revisions
 _core:
@@ -53,10 +53,11 @@ settings:
       localgov_box_link: localgov_box_link
       localgov_box_links_listing: localgov_box_links_listing
       localgov_call_out_box: localgov_call_out_box
-      localgov_key_facts: localgov_key_facts
+      pcc_chart: pcc_chart
       localgov_documents: localgov_documents
       localgov_featured_teasers: localgov_featured_teasers
       localgov_image: localgov_image
+      localgov_key_facts: localgov_key_facts
       localgov_link: localgov_link
       localgov_link_and_summary: localgov_link_and_summary
       localgov_media_with_text: localgov_media_with_text
@@ -72,15 +73,11 @@ settings:
       localgov_subscribe_panel: localgov_subscribe_panel
       localgov_key_contacts: localgov_key_contacts
       localgov_page_section: localgov_page_section
-      chart: chart
     negate: 0
     target_bundles_drag_drop:
       banner_home_page:
-        weight: -51
+        weight: -50
         enabled: false
-      chart:
-        weight: 43
-        enabled: true
       from_library:
         weight: -69
         enabled: false
@@ -91,10 +88,10 @@ settings:
         weight: -71
         enabled: false
       localgov_banner_primary:
-        weight: -50
+        weight: -49
         enabled: false
       localgov_banner_secondary:
-        weight: -49
+        weight: -48
         enabled: false
       localgov_block_view:
         weight: -79
@@ -115,13 +112,13 @@ settings:
         weight: -73
         enabled: true
       localgov_fact_box:
-        weight: -48
-        enabled: false
-      localgov_featured_campaign:
         weight: -47
         enabled: false
+      localgov_featured_campaign:
+        weight: -46
+        enabled: false
       localgov_featured_subsite:
-        weight: -57
+        weight: -56
         enabled: true
       localgov_featured_teaser:
         weight: -77
@@ -130,72 +127,72 @@ settings:
         weight: -72
         enabled: true
       localgov_ia_block:
-        weight: -58
+        weight: -57
         enabled: true
       localgov_image:
         weight: -67
         enabled: true
       localgov_key_contact_item:
-        weight: -52
+        weight: -51
         enabled: false
       localgov_key_contacts:
-        weight: -53
+        weight: -52
         enabled: true
       localgov_key_fact:
         weight: -81
         enabled: false
       localgov_key_facts:
-        weight: -74
-        enabled: true
-      localgov_labelled_icon:
-        weight: -56
-        enabled: true
-      localgov_link:
         weight: -66
         enabled: true
-      localgov_link_and_summary:
-        weight: -65
-        enabled: true
-      localgov_media_with_text:
-        weight: -64
-        enabled: true
-      localgov_newsroom_teaser:
+      localgov_labelled_icon:
         weight: -55
         enabled: true
-      localgov_numbered_text:
-        weight: -46
-        enabled: false
-      localgov_page_section:
-        weight: -45
+      localgov_link:
+        weight: -65
         enabled: true
-      localgov_publications_banner:
-        weight: -44
-        enabled: false
-      localgov_quote:
+      localgov_link_and_summary:
+        weight: -64
+        enabled: true
+      localgov_media_with_text:
         weight: -63
         enabled: true
-      localgov_subscribe_panel:
+      localgov_newsroom_teaser:
         weight: -54
+        enabled: true
+      localgov_numbered_text:
+        weight: -45
+        enabled: false
+      localgov_page_section:
+        weight: -44
+        enabled: true
+      localgov_publications_banner:
+        weight: -43
+        enabled: false
+      localgov_quote:
+        weight: -62
+        enabled: true
+      localgov_subscribe_panel:
+        weight: -53
         enabled: true
       localgov_tab_panel:
         weight: -70
         enabled: false
       localgov_table:
-        weight: -62
-        enabled: true
-      localgov_tabs:
         weight: -61
         enabled: true
-      localgov_text:
+      localgov_tabs:
         weight: -60
         enabled: true
-      localgov_video:
+      localgov_text:
         weight: -59
         enabled: true
-      page_section:
-        weight: -42
+      localgov_video:
+        weight: -58
+        enabled: true
+      pcc_chart:
+        weight: -74
         enabled: true
       topic_list_builder:
-        weight: -43
+        weight: -42
         enabled: false
 field_type: entity_reference_revisions
