--- a/config/sync/field.field.node.localgov_subsites_page.localgov_subsites_content.yml
+++ b/config/sync/field.field.node.localgov_subsites_page.localgov_subsites_content.yml
@@ -24,6 +24,7 @@ dependencies:
     - paragraphs.paragraphs_type.localgov_tabs
     - paragraphs.paragraphs_type.localgov_text
     - paragraphs.paragraphs_type.localgov_video
+    - paragraphs.paragraphs_type.pcc_chart
   module:
     - entity_reference_revisions
 _core:
@@ -52,6 +53,7 @@ settings:
       localgov_key_facts: localgov_key_facts
       localgov_block_view: localgov_block_view
       localgov_box_links_listing: localgov_box_links_listing
+      pcc_chart: pcc_chart
       localgov_key_contacts: localgov_key_contacts
       localgov_link_and_summary: localgov_link_and_summary
       localgov_media_with_text: localgov_media_with_text
@@ -64,123 +66,123 @@ settings:
     negate: 0
     target_bundles_drag_drop:
       banner_home_page:
-        weight: 41
-        enabled: false
-      chart:
-        weight: 42
+        weight: -53
         enabled: false
       from_library:
-        weight: -55
+        weight: -81
         enabled: false
       localgov_accordion:
-        weight: -53
+        weight: -79
         enabled: true
       localgov_accordion_pane:
-        weight: -54
+        weight: -80
         enabled: false
       localgov_banner_primary:
-        weight: 46
+        weight: -52
         enabled: false
       localgov_banner_secondary:
-        weight: 47
+        weight: -51
         enabled: false
       localgov_block_view:
-        weight: -37
+        weight: -71
         enabled: true
       localgov_box_link:
-        weight: -52
+        weight: -78
         enabled: true
       localgov_box_links_listing:
-        weight: -33
+        weight: -68
         enabled: true
       localgov_call_out_box:
-        weight: -51
+        weight: -77
         enabled: true
       localgov_contact:
-        weight: -17
+        weight: -55
         enabled: false
       localgov_documents:
-        weight: -50
+        weight: -76
         enabled: true
       localgov_fact_box:
-        weight: -49
+        weight: -75
         enabled: true
       localgov_featured_campaign:
-        weight: 55
+        weight: -50
         enabled: false
       localgov_featured_subsite:
-        weight: 56
+        weight: -49
         enabled: false
       localgov_featured_teaser:
-        weight: -29
+        weight: -64
         enabled: false
       localgov_featured_teasers:
-        weight: -48
+        weight: -74
         enabled: true
       localgov_ia_block:
-        weight: 59
+        weight: -48
         enabled: false
       localgov_image:
-        weight: -47
+        weight: -73
         enabled: true
       localgov_key_contact_item:
-        weight: -31
+        weight: -66
         enabled: false
       localgov_key_contacts:
-        weight: -32
+        weight: -63
         enabled: true
       localgov_key_fact:
-        weight: -30
+        weight: -65
         enabled: false
       localgov_key_facts:
-        weight: -46
+        weight: -72
         enabled: true
       localgov_labelled_icon:
-        weight: 65
+        weight: -47
         enabled: false
       localgov_link:
-        weight: -36
+        weight: -70
         enabled: false
       localgov_link_and_summary:
-        weight: -25
+        weight: -62
         enabled: true
       localgov_media_with_text:
-        weight: -24
+        weight: -61
         enabled: true
       localgov_newsroom_teaser:
-        weight: 69
+        weight: -46
         enabled: false
       localgov_numbered_text:
-        weight: 70
+        weight: -45
         enabled: false
       localgov_page_section:
-        weight: 71
+        weight: -44
         enabled: true
       localgov_publications_banner:
-        weight: 72
+        weight: -43
         enabled: false
       localgov_quote:
-        weight: -23
+        weight: -60
         enabled: true
       localgov_subscribe_panel:
-        weight: 74
+        weight: -42
         enabled: false
       localgov_tab_panel:
-        weight: -15
+        weight: -54
         enabled: false
       localgov_table:
-        weight: -22
+        weight: -59
         enabled: true
       localgov_tabs:
-        weight: -21
+        weight: -58
         enabled: true
       localgov_text:
-        weight: -20
+        weight: -57
         enabled: true
       localgov_video:
-        weight: -19
+        weight: -56
+        enabled: true
+      pcc_chart:
+        weight: -67
         enabled: true
       topic_list_builder:
-        weight: -35
+        weight: -69
         enabled: false
 field_type: entity_reference_revisions
